feat(web): implement sidenav layout

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -18,8 +18,8 @@
   </head>
   <body>
     <hs-root></hs-root>
-    <noscript
-      >Please enable JavaScript to continue using this application.</noscript
-    >
+    <noscript>
+      Please enable JavaScript to continue using this application.
+    </noscript>
   </body>
 </html>
