feat(web): embed fira code from google fonts

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -15,6 +15,10 @@
     <link rel="icon" sizes="192x192" href="/assets/icon-192x192.png" />
     <link rel="icon" sizes="384x384" href="/assets/icon-384x384.png" />
     <link rel="icon" sizes="512x512" href="/assets/icon-512x512.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <hs-root></hs-root>
