feat(web): add apple touch icon

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -15,6 +15,7 @@
     <link rel="icon" sizes="192x192" href="/assets/icons/icon-192x192.png" />
     <link rel="icon" sizes="384x384" href="/assets/icons/icon-384x384.png" />
     <link rel="icon" sizes="512x512" href="/assets/icons/icon-512x512.png" />
+    <link rel="apple-touch-icon" href="/assets/icons/touch-icon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap"
       rel="stylesheet"
