feat(web): add cloudflare web analytics

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -20,6 +20,11 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap"
       rel="stylesheet"
     />
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "78c0acf6a0c749049e1b7292ee76fbe1"}'
+    ></script>
   </head>
   <body>
     <hs-root></hs-root>
