--- a/web/src/index.html
+++ b/web/src/index.html
@@ -27,7 +27,7 @@
     ></script>
   </head>
   <body>
-    <hs-root></hs-root>
+    <hls-root></hls-root>
     <noscript>
       Please enable JavaScript to continue using this application.
     </noscript>
