feat(web): add og:* meta tag (#735)

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -20,6 +20,10 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap"
       rel="stylesheet"
     />
+    <meta property="og:title" content="HoloStats" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/assets/open-graph.jpg" />
+    <meta property="og:url" content="https://holo.poi.cat" />
   </head>
   <body>
     <hls-root></hls-root>
