fix(web): catch SecurityError

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -31,7 +31,10 @@
       Please enable JavaScript to continue using this application.
     </noscript>
     <script>
-      const theme = window.localStorage.getItem("theme");
+      let theme;
+      try {
+        theme = window.localStorage.getItem("theme");
+      } catch (e) {}
       const isDarkMode =
         "dark" === theme ||
         ((!theme || "system" === theme) &&
