--- a/src/index.html
+++ b/src/index.html
@@ -53,5 +53,11 @@
       window.gitCommitSha = "GIT_COMMIT_SHA";
       window.gitBranch = "GIT_BRANCH";
     </script>
+
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token":"a55155db07a5447e8f640e515c67b6e3"}'
+    ></script>
   </body>
 </html>
