chore: hls -> vts

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <meta property="og:url" content="https://vt.poi.cat" />
   </head>
   <body class="dark">
-    <hls-root></hls-root>
+    <vts-root></vts-root>
     <div id="react-root"></div>
     <noscript>
       Please enable JavaScript to continue using this application.
