--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#FFFFFF" />
-    <link rel="icon" sizes="72x72" href="/assets/icons/icon-72x72.png" />
-    <link rel="icon" sizes="96x96" href="/assets/icons/icon-96x96.png" />
-    <link rel="icon" sizes="128x128" href="/assets/icons/icon-128x128.png" />
-    <link rel="icon" sizes="144x144" href="/assets/icons/icon-144x144.png" />
-    <link rel="icon" sizes="152x152" href="/assets/icons/icon-152x152.png" />
-    <link rel="icon" sizes="192x192" href="/assets/icons/icon-192x192.png" />
-    <link rel="icon" sizes="384x384" href="/assets/icons/icon-384x384.png" />
-    <link rel="icon" sizes="512x512" href="/assets/icons/icon-512x512.png" />
-    <link rel="apple-touch-icon" href="/assets/icons/touch-icon.png" />
+    <link
+      rel="icon"
+      sizes="72x72"
+      href="https://vt-s3.poi.cat/icons/icon-72x72.png"
+    />
+    <link
+      rel="icon"
+      sizes="96x96"
+      href="https://vt-s3.poi.cat/icons/icon-96x96.png"
+    />
+    <link
+      rel="icon"
+      sizes="128x128"
+      href="https://vt-s3.poi.cat/icons/icon-128x128.png"
+    />
+    <link
+      rel="icon"
+      sizes="144x144"
+      href="https://vt-s3.poi.cat/icons/icon-144x144.png"
+    />
+    <link
+      rel="icon"
+      sizes="152x152"
+      href="https://vt-s3.poi.cat/icons/icon-152x152.png"
+    />
+    <link
+      rel="icon"
+      sizes="192x192"
+      href="https://vt-s3.poi.cat/icons/icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      sizes="384x384"
+      href="https://vt-s3.poi.cat/icons/icon-384x384.png"
+    />
+    <link
+      rel="icon"
+      sizes="512x512"
+      href="https://vt-s3.poi.cat/icons/icon-512x512.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="https://vt-s3.poi.cat/icons/touch-icon.png"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,7 +59,7 @@
     />
     <meta property="og:title" content="vtstats" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/assets/open-graph.jpg" />
+    <meta property="og:image" content="https://vt-s3.poi.cat/open-graph.jpg" />
     <meta property="og:url" content="https://vt.poi.cat" />
   </head>
   <body class="dark">
