refactor: use QUERY_CLIENT and DATE_FNS_LOCALE tokens

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,10 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://vt-s3.poi.cat/open-graph.jpg" />
     <meta property="og:url" content="https://vt.poi.cat" />
+
+    <meta name="twitter:title" content="vtstats" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="https://vt-s3.poi.cat/open-graph.jpg" />
   </head>
   <body class="dark">
     <vts-root></vts-root>
